# AI-sports-outcome-predictor

./: .env  .env.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  WAY_FORWARD.md  advanced_prediction_engine.py  api_research.py  apprunner.yaml  browser_analysis_engine.py  content_processor.py  data_acquisition.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  enhanced_predictions.py  final_analyzer.py  fixed_bot.py  football_data_collector.py  league_mixer.py  llm_predictor.py  main.py  mini-app-simple.js  package-lock.json  package.json  pyproject.toml  query_generator.py  quick-deploy.sh  quick_fix_features.py  render.yaml  replit.md  setup_run.ps1  simple_football_api.py  social_features.py  sportbot.md  tmp_rovodev_diff_pyproject.txt  tmp_rovodev_new_pyproject.toml  training_order.pkl  training_status.pkl  (+1 more)
.kilocode/: mcp.json
archive/: database_manager.py  docker-entrypoint.sh  fix_27_features.py  fix_training_27_features.py  fixed_bot_legacy.py  gemini_predictor.py  mini-app.js  ml_pytorch_lstm_framework.py  ml_tensorflow_framework.py  quick_training_fix.py  sequential_training.py  setup_mini_app.py  simple_bot.py  test_27_features.py  test_xgboost_simple.py
client/: package.json
docs/: deep_analyze.md  flash_live_implementation.md  flash_live_sports_degen.md
live/: __init__.py  live_session.py  policies.py
ml/: comprehensive_authentic_predictor.py  direct_odds_api.py  enhanced_27_feature_system.py  enhanced_feature_engine.py  enhanced_feature_extractor.py  enhanced_xgboost_framework.py  lightgbm_framework.py  live_odds_collector.py  (+2 more)
(+30 files in other folders)
